<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/barLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:background="@color/white"
                    android:layout_height="?android:attr/actionBarSize"
                    app:menu="@menu/top_toolbar">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:textSize="20sp"
                        android:fontFamily="@font/share_tech_mono"
                        android:layout_gravity="center"
                        android:id="@+id/toolbar_title" />
                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>


            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swiperefresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:clickable="true"
                    android:padding="15dp">

                    <!-- Card1 -->
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView1"
                        style="@style/CardView.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="80dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="12dp">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="0dp"
                                android:layout_height="0dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/tree_pic"
                                app:layout_constraintDimensionRatio="H,16:9"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.cardview.widget.CardView
                                android:id="@+id/view"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="16dp"
                                android:elevation="12dp"
                                app:cardCornerRadius="25dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/imageView">

                                <ImageView
                                    android:id="@+id/circleImage"
                                    android:layout_width="50dp"
                                    android:layout_height="50dp"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/tree_pic" />

                            </androidx.cardview.widget.CardView>

                            <TextView
                                android:id="@+id/name"
                                style="@style/TextAppearance.AppCompat.Title"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/forest_broadleaf"
                                app:layout_constraintBottom_toTopOf="@+id/desc"
                                app:layout_constraintStart_toEndOf="@+id/view"
                                app:layout_constraintTop_toTopOf="@+id/view" />

                            <TextView
                                android:id="@+id/desc"
                                style="@style/TextAppearance.AppCompat.Body1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:text="@string/sm_5000"
                                android:textColor="#8A000000"
                                app:layout_constraintStart_toEndOf="@+id/view"
                                app:layout_constraintTop_toBottomOf="@+id/name" />

                            <Button
                                android:id="@+id/arrowBtn"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginEnd="12dp"
                                android:background="@drawable/ic_keyboard_arrow_down_black_24dp"
                                app:layout_constraintBottom_toBottomOf="@+id/view"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@+id/view" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/expandableView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:paddingBottom="12dp"
                                android:visibility="gone"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/desc">

                                <ImageView
                                    android:id="@+id/phoneIcon"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginTop="22dp"
                                    android:src="@drawable/ic_phone_black_24dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <TextView
                                    android:id="@+id/phoneNumber"
                                    style="@style/TextAppearance.AppCompat.Medium"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:text="@string/phonenumber"
                                    android:textColor="#000"
                                    app:layout_constraintBottom_toTopOf="@+id/phoneDesc"
                                    app:layout_constraintStart_toEndOf="@id/phoneIcon"
                                    app:layout_constraintTop_toTopOf="@+id/phoneIcon" />

                                <TextView
                                    android:id="@+id/phoneDesc"
                                    style="@style/TextAppearance.AppCompat.Body1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:text="@string/mobile"
                                    android:textColor="#8A000000"
                                    app:layout_constraintBottom_toBottomOf="@+id/phoneIcon"
                                    app:layout_constraintStart_toEndOf="@id/phoneIcon"
                                    app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

                                <ImageView
                                    android:id="@+id/mailIcon"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:layout_marginStart="12dp"
                                    android:layout_marginTop="22dp"
                                    android:src="@drawable/ic_mail_black_24dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/phoneIcon" />

                                <TextView
                                    android:id="@+id/mailNumber"
                                    style="@style/TextAppearance.AppCompat.Medium"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:text="@string/emailValue"
                                    android:textColor="#000"
                                    app:layout_constraintBottom_toTopOf="@+id/mailDesc"
                                    app:layout_constraintStart_toEndOf="@id/mailIcon"
                                    app:layout_constraintTop_toTopOf="@+id/mailIcon" />

                                <TextView
                                    android:id="@+id/mailDesc"
                                    style="@style/TextAppearance.AppCompat.Body1"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="32dp"
                                    android:text="Work"
                                    android:textColor="#8A000000"
                                    app:layout_constraintBottom_toBottomOf="@+id/mailIcon"
                                    app:layout_constraintStart_toEndOf="@id/mailIcon"
                                    app:layout_constraintTop_toBottomOf="@+id/mailNumber" />

                                <Button
                                    android:id="@+id/btnContext"
                                    android:text="@string/btn_context"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginLeft="30dp"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toBottomOf="@+id/mailDesc">

                                </Button>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </androidx.cardview.widget.CardView>

                </FrameLayout>


            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:labelVisibilityMode="unlabeled"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_navview_menu" />

        </RelativeLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />
</androidx.drawerlayout.widget.DrawerLayout>